# talktoit

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: audit.yml  ci.yml
backend/: pyproject.toml  pyrightconfig.json
backend/app/: main.py
backend/app/api/: chat.py  dashboard.py
backend/app/cli/: chat.py
backend/app/db/: aggregations.py  connection.py  data_profile.py  queries.py  schema.py
backend/app/ingest/: bytescan.py  coordinator.py  gpx.py  parser.py  reconcile.py  run.py
backend/app/llm/: client.py  local_planner.py  orchestrator.py  prompt_format.py  tools.py
backend/app/models/: chat.py  dashboard.py  templates.py
backend/tests/: test_health.py
backend/tests/fixtures/: route.gpx  sample.xml
backend/tests/integration/: test_chat.py  test_dashboard.py  test_ingest.py  test_ingest_v2.py  test_queries.py  test_worker_invariance.py
backend/tests/unit/: test_aggregations.py  test_bytescan.py  test_cli_chat.py  test_data_profile.py  test_gpx.py  test_llm_client.py  test_local_planner.py  test_models.py  test_prompt_format.py  test_tools.py
docs/: DISCOVERY.md  ENGINEERING.md  HEALTH_DATA_UI_STYLEGUIDE.md  LLM_CLI_AND_TOOL_RESILIENCE_PLAN.md  PERF-AUDIT.md  ROUND-1-FIXES.md  SPEC.md
docs/planning/: README.md
experiments/chart-comparison/: .gitignore  COMPARISON.md  extract_data.py  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/: .oxlintrc.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: app.tsx
perf-audit-results/: ingest-after.md  ingest-before.md
scripts/: groq_smoke.sh
(+48 files in other folders)
