[project]
name = "tti-backend"
version = "0.1.0"
description = "tti (talk-to-it) — backend ingestion and LLM tool orchestration"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "lxml>=5.3.0",
    "duckdb>=1.1.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "openai>=1.58.0",
    "aiofiles>=25.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.6.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pip-audit>=2.7.0",
    "pyright>=1.1.400",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modernise syntax)
    "S",      # bandit (security)
    "ANN",    # flake8-annotations (enforce type hints)
    "D",      # pydocstyle (docstrings)
    "RUF",    # ruff-specific rules
]
ignore = [
    "D100",   # missing docstring in public module (file-level)
    "D104",   # missing docstring in public package (__init__)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=80 -n auto"
